--- a/Pastillero.ui
+++ b/Pastillero.ui
@@ -55,10 +55,10 @@ background-color: rgb(170, 255, 255);</string>
      </size>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(60, 223, 255);</string>
+     <string notr="true">background-color: rgb(227, 227, 227);</string>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -429,19 +429,6 @@ background-color: rgb(170, 255, 255);</string>
      <attribute name="title">
       <string>Registro de medicamentos</string>
      </attribute>
-     <widget class="QLineEdit" name="linEdit_Medicamento">
-      <property name="geometry">
-       <rect>
-        <x>210</x>
-        <y>100</y>
-        <width>211</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(255, 255, 255);</string>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_11">
       <property name="geometry">
        <rect>
@@ -520,6 +507,19 @@ background-color: rgb(170, 255, 255);</string>
       </property>
       <property name="text">
        <string>Concluir registro</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox">
+      <property name="geometry">
+       <rect>
+        <x>280</x>
+        <y>110</y>
+        <width>69</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"/>
       </property>
      </widget>
     </widget>
@@ -817,27 +817,27 @@ background-color: rgb(170, 255, 255);</string>
          <colorrole role="Button">
           <brush brushstyle="SolidPattern">
            <color alpha="255">
-            <red>60</red>
-            <green>223</green>
-            <blue>255</blue>
+            <red>227</red>
+            <green>227</green>
+            <blue>227</blue>
            </color>
           </brush>
          </colorrole>
          <colorrole role="Base">
           <brush brushstyle="SolidPattern">
            <color alpha="255">
-            <red>60</red>
-            <green>223</green>
-            <blue>255</blue>
+            <red>227</red>
+            <green>227</green>
+            <blue>227</blue>
            </color>
           </brush>
          </colorrole>
          <colorrole role="Window">
           <brush brushstyle="SolidPattern">
            <color alpha="255">
-            <red>60</red>
-            <green>223</green>
-            <blue>255</blue>
+            <red>227</red>
+            <green>227</green>
+            <blue>227</blue>
            </color>
           </brush>
          </colorrole>
@@ -846,27 +846,27 @@ background-color: rgb(170, 255, 255);</string>
          <colorrole role="Button">
           <brush brushstyle="SolidPattern">
            <color alpha="255">
-            <red>60</red>
-            <green>223</green>
-            <blue>255</blue>
+            <red>227</red>
+            <green>227</green>
+            <blue>227</blue>
            </color>
           </brush>
          </colorrole>
          <colorrole role="Base">
           <brush brushstyle="SolidPattern">
            <color alpha="255">
-            <red>60</red>
-            <green>223</green>
-            <blue>255</blue>
+            <red>227</red>
+            <green>227</green>
+            <blue>227</blue>
            </color>
           </brush>
          </colorrole>
          <colorrole role="Window">
           <brush brushstyle="SolidPattern">
            <color alpha="255">
-            <red>60</red>
-            <green>223</green>
-            <blue>255</blue>
+            <red>227</red>
+            <green>227</green>
+            <blue>227</blue>
            </color>
           </brush>
          </colorrole>
@@ -875,27 +875,27 @@ background-color: rgb(170, 255, 255);</string>
          <colorrole role="Button">
           <brush brushstyle="SolidPattern">
            <color alpha="255">
-            <red>60</red>
-            <green>223</green>
-            <blue>255</blue>
+            <red>227</red>
+            <green>227</green>
+            <blue>227</blue>
            </color>
           </brush>
          </colorrole>
          <colorrole role="Base">
           <brush brushstyle="SolidPattern">
            <color alpha="255">
-            <red>60</red>
-            <green>223</green>
-            <blue>255</blue>
+            <red>227</red>
+            <green>227</green>
+            <blue>227</blue>
            </color>
           </brush>
          </colorrole>
          <colorrole role="Window">
           <brush brushstyle="SolidPattern">
            <color alpha="255">
-            <red>60</red>
-            <green>223</green>
-            <blue>255</blue>
+            <red>227</red>
+            <green>227</green>
+            <blue>227</blue>
            </color>
           </brush>
          </colorrole>
