--- a/Pastillero.ui
+++ b/Pastillero.ui
@@ -29,8 +29,7 @@
    <string>Pastillero</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(60, 223, 255);
-background-color: rgb(170, 255, 255);</string>
+   <string notr="true">background-color: rgb(202, 202, 202);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTabWidget" name="tabWidget">
@@ -95,10 +94,10 @@ background-color: rgb(170, 255, 255);</string>
           </font>
          </property>
          <property name="styleSheet">
-          <string notr="true">background-color: rgb(60, 223, 255);</string>
+          <string notr="true">background-color: rgb(227,227,227);</string>
          </property>
          <property name="text">
-          <string>Registro Pacientes</string>
+          <string>Bienvenido a su pastillero digital</string>
          </property>
         </widget>
        </item>
@@ -132,8 +131,7 @@ background-color: rgb(170, 255, 255);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(60, 223, 255);
-background-color: rgb(170, 255, 255);</string>
+       <string notr="true">background-color: rgb(208, 208, 208);</string>
       </property>
       <property name="text">
        <string>Registrarce</string>
@@ -154,8 +152,7 @@ background-color: rgb(170, 255, 255);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(60, 223, 255);
-background-color: rgb(170, 255, 255);</string>
+       <string notr="true">background-color: rgb(208, 208, 208);</string>
       </property>
       <property name="text">
        <string>Iniciar Sesion</string>
@@ -219,8 +216,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>90</y>
+        <x>40</x>
+        <y>120</y>
         <width>101</width>
         <height>16</height>
        </rect>
@@ -237,8 +234,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>120</y>
+        <x>40</x>
+        <y>150</y>
         <width>61</width>
         <height>31</height>
        </rect>
@@ -255,8 +252,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>160</y>
+        <x>40</x>
+        <y>190</y>
         <width>131</width>
         <height>31</height>
        </rect>
@@ -273,8 +270,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLabel" name="label_6">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>200</y>
+        <x>40</x>
+        <y>230</y>
         <width>151</width>
         <height>31</height>
        </rect>
@@ -291,8 +288,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLineEdit" name="lEdit_nombre_reg">
       <property name="geometry">
        <rect>
-        <x>190</x>
-        <y>80</y>
+        <x>200</x>
+        <y>110</y>
         <width>211</width>
         <height>21</height>
        </rect>
@@ -304,8 +301,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLineEdit" name="lEdit_edad_reg">
       <property name="geometry">
        <rect>
-        <x>190</x>
-        <y>120</y>
+        <x>200</x>
+        <y>150</y>
         <width>211</width>
         <height>21</height>
        </rect>
@@ -317,8 +314,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLineEdit" name="lEdit_Dx">
       <property name="geometry">
        <rect>
-        <x>190</x>
-        <y>160</y>
+        <x>200</x>
+        <y>190</y>
         <width>211</width>
         <height>21</height>
        </rect>
@@ -330,8 +327,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLineEdit" name="lEdit_NoSS">
       <property name="geometry">
        <rect>
-        <x>190</x>
-        <y>200</y>
+        <x>200</x>
+        <y>230</y>
         <width>211</width>
         <height>21</height>
        </rect>
@@ -344,7 +341,7 @@ background-color: rgb(170, 255, 255);</string>
       <property name="geometry">
        <rect>
         <x>150</x>
-        <y>310</y>
+        <y>340</y>
         <width>191</width>
         <height>41</height>
        </rect>
@@ -355,8 +352,7 @@ background-color: rgb(170, 255, 255);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(60, 223, 255);
-background-color: rgb(170, 255, 255);</string>
+       <string notr="true">background-color: rgb(208, 208, 208);</string>
       </property>
       <property name="text">
        <string>Registrar</string>
@@ -365,8 +361,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLineEdit" name="lEdit_User">
       <property name="geometry">
        <rect>
-        <x>190</x>
-        <y>240</y>
+        <x>200</x>
+        <y>270</y>
         <width>211</width>
         <height>21</height>
        </rect>
@@ -378,8 +374,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLineEdit" name="lEdit_Password">
       <property name="geometry">
        <rect>
-        <x>190</x>
-        <y>270</y>
+        <x>200</x>
+        <y>300</y>
         <width>211</width>
         <height>21</height>
        </rect>
@@ -391,8 +387,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLabel" name="label_13">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>270</y>
+        <x>40</x>
+        <y>300</y>
         <width>151</width>
         <height>31</height>
        </rect>
@@ -409,8 +405,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLabel" name="label_24">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>240</y>
+        <x>40</x>
+        <y>270</y>
         <width>151</width>
         <height>31</height>
        </rect>
@@ -422,6 +418,27 @@ background-color: rgb(170, 255, 255);</string>
       </property>
       <property name="text">
        <string>Usuario</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="lbl_corregir">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>80</y>
+        <width>341</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 0, 0);</string>
+      </property>
+      <property name="text">
+       <string/>
       </property>
      </widget>
     </widget>
@@ -450,8 +467,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QLabel" name="label_15">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>40</y>
+        <x>60</x>
+        <y>30</y>
         <width>371</width>
         <height>31</height>
        </rect>
@@ -468,8 +485,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QPushButton" name="btn_add_med">
       <property name="geometry">
        <rect>
-        <x>140</x>
-        <y>210</y>
+        <x>30</x>
+        <y>200</y>
         <width>191</width>
         <height>41</height>
        </rect>
@@ -480,8 +497,7 @@ background-color: rgb(170, 255, 255);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(60, 223, 255);
-background-color: rgb(170, 255, 255);</string>
+       <string notr="true">background-color: rgb(208, 208, 208);</string>
       </property>
       <property name="text">
        <string>Agregar</string>
@@ -490,8 +506,8 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QPushButton" name="btn_end_med">
       <property name="geometry">
        <rect>
-        <x>140</x>
-        <y>280</y>
+        <x>260</x>
+        <y>200</y>
         <width>191</width>
         <height>41</height>
        </rect>
@@ -502,8 +518,7 @@ background-color: rgb(170, 255, 255);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(60, 223, 255);
-background-color: rgb(170, 255, 255);</string>
+       <string notr="true">background-color: rgb(208, 208, 208);</string>
       </property>
       <property name="text">
        <string>Concluir registro</string>
@@ -512,14 +527,56 @@ background-color: rgb(170, 255, 255);</string>
      <widget class="QComboBox" name="comboBox">
       <property name="geometry">
        <rect>
-        <x>280</x>
-        <y>110</y>
-        <width>69</width>
-        <height>22</height>
+        <x>210</x>
+        <y>90</y>
+        <width>211</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true"/>
+       <string notr="true">background-color: rgb(243, 243, 243);</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btn_record_med">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>300</y>
+        <width>261</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(208, 208, 208);</string>
+      </property>
+      <property name="text">
+       <string>Registrar medicamento</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>270</y>
+        <width>431</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="whatsThis">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;kl&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+      <property name="text">
+       <string>Si su medicamento no aparece en la lista, porfavor registre el medicamento</string>
       </property>
      </widget>
     </widget>
@@ -542,8 +599,7 @@ background-color: rgb(170, 255, 255);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(60, 223, 255);
-background-color: rgb(170, 255, 255);</string>
+       <string notr="true">background-color: rgb(208, 208, 208);</string>
       </property>
       <property name="text">
        <string>Buscar</string>
@@ -773,8 +829,7 @@ background-color: rgb(170, 255, 255);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(60, 223, 255);
-background-color: rgb(170, 255, 255);</string>
+       <string notr="true">background-color: rgb(208, 208, 208);</string>
       </property>
       <property name="text">
        <string>Cerrar Sesion</string>
@@ -795,8 +850,7 @@ background-color: rgb(170, 255, 255);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(60, 223, 255);
-background-color: rgb(170, 255, 255);</string>
+       <string notr="true">background-color: rgb(208, 208, 208);</string>
       </property>
       <property name="text">
        <string>Modificar</string>
