--- a/Pastillero.ui
+++ b/Pastillero.ui
@@ -57,7 +57,7 @@
      <string notr="true">background-color: rgb(227, 227, 227);</string>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="tab_inicio">
      <attribute name="title">
@@ -190,7 +190,7 @@
         <widget class="QLabel" name="label_2">
          <property name="font">
           <font>
-           <pointsize>18</pointsize>
+           <pointsize>16</pointsize>
           </font>
          </property>
          <property name="text">
@@ -423,15 +423,15 @@
      <widget class="QLabel" name="lbl_corregir">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>80</y>
-        <width>341</width>
-        <height>16</height>
+        <x>30</x>
+        <y>60</y>
+        <width>411</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <pointsize>12</pointsize>
        </font>
       </property>
       <property name="styleSheet">
@@ -439,6 +439,12 @@
       </property>
       <property name="text">
        <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
       </property>
      </widget>
      <widget class="QPushButton" name="btn_regresar_main">
@@ -470,8 +476,8 @@
      <widget class="QLabel" name="label_11">
       <property name="geometry">
        <rect>
-        <x>60</x>
-        <y>100</y>
+        <x>50</x>
+        <y>160</y>
         <width>121</width>
         <height>16</height>
        </rect>
@@ -506,8 +512,8 @@
      <widget class="QPushButton" name="btn_add_med">
       <property name="geometry">
        <rect>
-        <x>160</x>
-        <y>150</y>
+        <x>150</x>
+        <y>200</y>
         <width>191</width>
         <height>41</height>
        </rect>
@@ -548,8 +554,8 @@
      <widget class="QComboBox" name="comboBox">
       <property name="geometry">
        <rect>
-        <x>210</x>
-        <y>90</y>
+        <x>220</x>
+        <y>150</y>
         <width>211</width>
         <height>31</height>
        </rect>
@@ -583,14 +589,14 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>210</y>
+        <y>70</y>
         <width>441</width>
-        <height>31</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>9</pointsize>
+        <pointsize>12</pointsize>
        </font>
       </property>
       <property name="whatsThis">
@@ -603,7 +609,7 @@
        <number>1</number>
       </property>
       <property name="text">
-       <string>Si su medicamento no aparece en la lista, porfavor registre el medicamento y actualice la lista</string>
+       <string>Medicamentos seleccionados: 0</string>
       </property>
       <property name="wordWrap">
        <bool>true</bool>
