--- a/Pastillero.ui
+++ b/Pastillero.ui
@@ -57,7 +57,7 @@
      <string notr="true">background-color: rgb(227, 227, 227);</string>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="tab_inicio">
      <attribute name="title">
@@ -827,7 +827,7 @@
        <rect>
         <x>40</x>
         <y>100</y>
-        <width>171</width>
+        <width>191</width>
         <height>31</height>
        </rect>
       </property>
@@ -850,7 +850,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>TextLabel</string>
+       <string/>
       </property>
      </widget>
      <widget class="QLabel" name="lbl_edad">
@@ -863,7 +863,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>TextLabel</string>
+       <string/>
       </property>
      </widget>
      <widget class="QLabel" name="lbl_Dx">
@@ -876,27 +876,27 @@
        </rect>
       </property>
       <property name="text">
-       <string>TextLabel</string>
+       <string/>
       </property>
      </widget>
      <widget class="QLabel" name="lbl_NoSocial">
       <property name="geometry">
        <rect>
-        <x>230</x>
+        <x>260</x>
         <y>110</y>
         <width>47</width>
         <height>13</height>
        </rect>
       </property>
       <property name="text">
-       <string>TextLabel</string>
+       <string/>
       </property>
      </widget>
      <widget class="QPushButton" name="btn_back_inicio">
       <property name="geometry">
        <rect>
         <x>290</x>
-        <y>290</y>
+        <y>350</y>
         <width>176</width>
         <height>27</height>
        </rect>
@@ -916,8 +916,8 @@
      <widget class="QPushButton" name="btn_modificar">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>290</y>
+        <x>20</x>
+        <y>350</y>
         <width>181</width>
         <height>27</height>
        </rect>
@@ -934,109 +934,27 @@
        <string>Modificar</string>
       </property>
      </widget>
-     <widget class="QListView" name="medicamentosList">
+     <widget class="QTableWidget" name="tabla_medicamentos">
       <property name="geometry">
        <rect>
-        <x>40</x>
+        <x>150</x>
         <y>140</y>
-        <width>371</width>
-        <height>111</height>
+        <width>181</width>
+        <height>192</height>
        </rect>
       </property>
-      <property name="palette">
-       <palette>
-        <active>
-         <colorrole role="Button">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>227</red>
-            <green>227</green>
-            <blue>227</blue>
-           </color>
-          </brush>
-         </colorrole>
-         <colorrole role="Base">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>227</red>
-            <green>227</green>
-            <blue>227</blue>
-           </color>
-          </brush>
-         </colorrole>
-         <colorrole role="Window">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>227</red>
-            <green>227</green>
-            <blue>227</blue>
-           </color>
-          </brush>
-         </colorrole>
-        </active>
-        <inactive>
-         <colorrole role="Button">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>227</red>
-            <green>227</green>
-            <blue>227</blue>
-           </color>
-          </brush>
-         </colorrole>
-         <colorrole role="Base">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>227</red>
-            <green>227</green>
-            <blue>227</blue>
-           </color>
-          </brush>
-         </colorrole>
-         <colorrole role="Window">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>227</red>
-            <green>227</green>
-            <blue>227</blue>
-           </color>
-          </brush>
-         </colorrole>
-        </inactive>
-        <disabled>
-         <colorrole role="Button">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>227</red>
-            <green>227</green>
-            <blue>227</blue>
-           </color>
-          </brush>
-         </colorrole>
-         <colorrole role="Base">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>227</red>
-            <green>227</green>
-            <blue>227</blue>
-           </color>
-          </brush>
-         </colorrole>
-         <colorrole role="Window">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>227</red>
-            <green>227</green>
-            <blue>227</blue>
-           </color>
-          </brush>
-         </colorrole>
-        </disabled>
-       </palette>
+      <property name="rowCount">
+       <number>5</number>
       </property>
-      <property name="verticalScrollBarPolicy">
-       <enum>Qt::ScrollBarAsNeeded</enum>
+      <property name="columnCount">
+       <number>1</number>
       </property>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <column/>
      </widget>
     </widget>
    </widget>
