--- a/Pastillero.ui
+++ b/Pastillero.ui
@@ -57,7 +57,7 @@
      <string notr="true">background-color: rgb(227, 227, 227);</string>
     </property>
     <property name="currentIndex">
-     <number>4</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="tab_inicio">
      <attribute name="title">
@@ -161,7 +161,7 @@
     </widget>
     <widget class="QWidget" name="tab_registro_px">
      <attribute name="title">
-      <string>Registrarce</string>
+      <string>Datos del paciente</string>
      </attribute>
      <widget class="QWidget" name="horizontalLayoutWidget_2">
       <property name="geometry">
@@ -217,7 +217,7 @@
       <property name="geometry">
        <rect>
         <x>40</x>
-        <y>120</y>
+        <y>110</y>
         <width>101</width>
         <height>16</height>
        </rect>
@@ -235,7 +235,7 @@
       <property name="geometry">
        <rect>
         <x>40</x>
-        <y>150</y>
+        <y>140</y>
         <width>61</width>
         <height>31</height>
        </rect>
@@ -253,7 +253,7 @@
       <property name="geometry">
        <rect>
         <x>40</x>
-        <y>190</y>
+        <y>180</y>
         <width>131</width>
         <height>31</height>
        </rect>
@@ -271,7 +271,7 @@
       <property name="geometry">
        <rect>
         <x>40</x>
-        <y>230</y>
+        <y>220</y>
         <width>151</width>
         <height>31</height>
        </rect>
@@ -406,7 +406,7 @@
       <property name="geometry">
        <rect>
         <x>40</x>
-        <y>270</y>
+        <y>260</y>
         <width>151</width>
         <height>31</height>
        </rect>
@@ -644,8 +644,8 @@
      <widget class="QPushButton" name="btn_pxView">
       <property name="geometry">
        <rect>
-        <x>270</x>
-        <y>220</y>
+        <x>280</x>
+        <y>290</y>
         <width>191</width>
         <height>41</height>
        </rect>
@@ -662,11 +662,11 @@
        <string>Iniciar sesion</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lbl_nombre_ingresar">
+     <widget class="QLineEdit" name="nombre_ingresar">
       <property name="geometry">
        <rect>
-        <x>190</x>
-        <y>90</y>
+        <x>230</x>
+        <y>130</y>
         <width>211</width>
         <height>21</height>
        </rect>
@@ -678,8 +678,8 @@
      <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
-        <x>60</x>
-        <y>90</y>
+        <x>80</x>
+        <y>130</y>
         <width>101</width>
         <height>16</height>
        </rect>
@@ -696,8 +696,8 @@
      <widget class="QLineEdit" name="lbl_password">
       <property name="geometry">
        <rect>
-        <x>190</x>
-        <y>140</y>
+        <x>230</x>
+        <y>190</y>
         <width>211</width>
         <height>21</height>
        </rect>
@@ -709,8 +709,8 @@
      <widget class="QLabel" name="label_8">
       <property name="geometry">
        <rect>
-        <x>60</x>
-        <y>140</y>
+        <x>80</x>
+        <y>190</y>
         <width>101</width>
         <height>16</height>
        </rect>
@@ -746,7 +746,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>220</y>
+        <y>290</y>
         <width>191</width>
         <height>41</height>
        </rect>
@@ -763,140 +763,39 @@
        <string>Regresar a menu principal</string>
       </property>
      </widget>
+     <widget class="QLabel" name="lbl_n_user">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>80</y>
+        <width>331</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color:rgb(255, 0, 0)</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_tabla_px">
      <attribute name="title">
       <string>Pacientes</string>
      </attribute>
-     <widget class="QLabel" name="label_16">
-      <property name="geometry">
-       <rect>
-        <x>40</x>
-        <y>70</y>
-        <width>131</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Padecimiento</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_17">
-      <property name="geometry">
-       <rect>
-        <x>40</x>
-        <y>40</y>
-        <width>61</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Edad</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_18">
-      <property name="geometry">
-       <rect>
-        <x>40</x>
-        <y>20</y>
-        <width>101</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Paciente</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_19">
-      <property name="geometry">
-       <rect>
-        <x>40</x>
-        <y>100</y>
-        <width>191</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>No. Seguridad Social</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="lbl_nombre">
-      <property name="geometry">
-       <rect>
-        <x>150</x>
-        <y>20</y>
-        <width>47</width>
-        <height>13</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QLabel" name="lbl_edad">
-      <property name="geometry">
-       <rect>
-        <x>140</x>
-        <y>50</y>
-        <width>47</width>
-        <height>13</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QLabel" name="lbl_Dx">
-      <property name="geometry">
-       <rect>
-        <x>190</x>
-        <y>80</y>
-        <width>47</width>
-        <height>13</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QLabel" name="lbl_NoSocial">
-      <property name="geometry">
-       <rect>
-        <x>260</x>
-        <y>110</y>
-        <width>47</width>
-        <height>13</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
      <widget class="QPushButton" name="btn_back_inicio">
       <property name="geometry">
        <rect>
         <x>290</x>
-        <y>350</y>
+        <y>360</y>
         <width>176</width>
         <height>27</height>
        </rect>
@@ -917,7 +816,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>350</y>
+        <y>360</y>
         <width>181</width>
         <height>27</height>
        </rect>
@@ -937,11 +836,49 @@
      <widget class="QTableWidget" name="tabla_medicamentos">
       <property name="geometry">
        <rect>
-        <x>150</x>
-        <y>140</y>
-        <width>181</width>
-        <height>192</height>
+        <x>50</x>
+        <y>200</y>
+        <width>391</width>
+        <height>151</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>5</number>
+      </property>
+      <property name="autoScrollMargin">
+       <number>15</number>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>20</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="textElideMode">
+       <enum>Qt::ElideLeft</enum>
+      </property>
+      <property name="showGrid">
+       <bool>true</bool>
+      </property>
+      <property name="gridStyle">
+       <enum>Qt::CustomDashLine</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>false</bool>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
       </property>
       <property name="rowCount">
        <number>5</number>
@@ -949,12 +886,165 @@
       <property name="columnCount">
        <number>1</number>
       </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>350</number>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>50</number>
+      </attribute>
+      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>40</number>
+      </attribute>
       <row/>
       <row/>
       <row/>
       <row/>
       <row/>
-      <column/>
+      <column>
+       <property name="text">
+        <string>Lista de medicamentos</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+      </column>
+     </widget>
+     <widget class="QGroupBox" name="groupBox">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>40</y>
+        <width>391</width>
+        <height>141</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="title">
+       <string>Datos del paciente.</string>
+      </property>
+      <widget class="QLabel" name="lbl_NoSocial">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>110</y>
+         <width>221</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QLabel" name="lbl_Dx">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>80</y>
+         <width>321</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Padecimiento:</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="lbl_edad">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>50</y>
+         <width>281</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Edad:</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="lbl_nombre">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>291</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Nombre:</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="lbl_social">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>110</y>
+         <width>141</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>No. Seguridad Social:</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QLabel" name="label_10">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>10</y>
+        <width>201</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Pastillero</string>
+      </property>
      </widget>
     </widget>
    </widget>
